🎉 Clase 01 Educacion IT / Fundación Pescar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <!-- 👀 CONTENIDO VISIBLE DE LA PÁGINA WEB 👀-->
     <!-- ======================================= -->
     <body>
+        <!-- 📝 Etiquetas HTML: -->
+        <!-- h1: Título principal -->
         <h1>¡Hola mundo! 👋</h1>
+        <!-- h2: Subtítulos atributos: lang="en" para aclarar en ciertas ocaciones el idioma de solo esa etiqueta -->
         <h2 lang="en">Hello world! 👋</h2>
         <p>Este es mi primer párrafo 📄</p>
     </body>
@@ -35,17 +38,17 @@
     <!-- TODO🟠 Tarea pendiente -->
     <!-- ~~Texto tachado~~ -->
 
-    <!-- 🟢 Ej: <a href="#contacto">Enlace importante</a> -->
-    <!-- 🔴 ¡No olvides cerrar las etiquetas! -->
-    <!-- 🔵 ¿Funcionará en móviles? -->
-    <!-- 🟠 TODO: Agregar footer aquí -->
+    <!-- * 🟢 Ej: <a href="#contacto">Enlace importante</a> -->
+    <!-- ! 🔴 ¡No olvides cerrar las etiquetas! -->
+    <!-- ? 🔵 ¿Funcionará en móviles? -->
+    <!-- TODO 🟠 TODO: Agregar footer aquí -->
 
 
     <!-- ======================================= -->
     <!-- 🔗 PROTOCOLOS COMUNES -->
     <!-- ======================================= -->
     <!-- ⚠️ Protocolo FILE (archivos locales) -->
-    <!-- <a href="file:///C:/Users/.../index.html">Abrir local</a> -->
+    <!-- <a href="C:/Users/curso-pescar/clase-01/index.html">Abrir local</a> -->
 
     <!-- 🌐 Protocolo HTTP (webs en internet) -->
     <!-- <a href="http://www.google.com">Ir a Google</a> -->
